...
    }
    
    var body: some View {
        NavigationView {
            Form {
                Section(header: Text("Название")) {
                    TextField("Введите напоминание", text: $title).accessibilityIdentifier("ReminderTitleField")
                }
                
                Section(header: Text("Тип запуска")) {
                    Picker("Режим", selection: $triggerMode) {
                        Text("Через интервал").tag(TriggerMode.interval)
                        Text("По дате и времени").tag(TriggerMode.date)
...
                                .setDate(reminderDate)
                            
                            let reminder = builder.build()
                            reminderService.addReminder(reminder)
                            notificationService.scheduleNotification(for: reminder)
                            presentationMode.wrappedValue.dismiss()
                        }.accessibilityIdentifier("SaveReminderButton")
                        Spacer()
                    }
                }
            }.navigationTitle("Создать")
        }
    }
...
