...

final class MainViewController: UIViewController, MainViewProtocol {

    var presenter: MainPresenterProtocol!

    private let mainView = MainView()
    private let addButton = UIBarButtonItem(barButtonSystemItem: .add, target: nil, action: nil)

    override func loadView() {
        view = mainView
    }

    override func viewDidLoad() {
...
